--- a/SSHTools/Sources/Common/Common/CMakeLists.txt
+++ b/SSHTools/Sources/Common/Common/CMakeLists.txt
@@ -3,20 +3,20 @@ cmake_minimum_required (VERSION 3.13)
 ################################################################################
 
 ################################################################################
-# Target: ${PROJECT_NAME}_ConfiParse
+# Target: ${PROJECT_NAME}_Common
 ################################################################################
 
-include ("ConfiParse_SourceFiles.cmake")
-add_library (${PROJECT_NAME}_ConfiParse STATIC
-  ${__ConfiParse_SourceFiles}
+include ("Common_SourceFiles.cmake")
+add_library (${PROJECT_NAME}_Common STATIC
+  ${__Common_SourceFiles}
 )
 
-target_include_directories (${PROJECT_NAME}_ConfiParse
+target_include_directories (${PROJECT_NAME}_Common
   PUBLIC
     "${CMAKE_CURRENT_LIST_DIR}/Include"
 )
 
-target_link_libraries (${PROJECT_NAME}_ConfiParse
+target_link_libraries (${PROJECT_NAME}_Common
   PRIVATE
     ${PROJECT_NAME}_Base
 )
