--- a/SSHTools/Sources/Common/CMakeLists.txt
+++ b/SSHTools/Sources/Common/CMakeLists.txt
@@ -6,13 +6,14 @@ cmake_minimum_required (VERSION 3.13)
 # Project name
 ################################################################################
 
-project ("SSHTools_Common")
+project ("SSHTools")
 
 ################################################################################
 
 ################################################################################
 
 add_subdirectory ("Base")
+add_subdirectory ("Common")
 add_subdirectory ("ConfiParse")
 
 ################################################################################
